DF-670 fixed rendering problem on chrome and aligned actions right

--- a/alv-portal-ui/src/app/widgets/manage-job-ads-widget/job-ad-management-table/job-ad-management-table.component.scss
+++ b/alv-portal-ui/src/app/widgets/manage-job-ads-widget/job-ad-management-table/job-ad-management-table.component.scss
@@ -33,7 +33,7 @@
   }
 
   .tr-content {
-    border-left: 5px solid transparent;
+    border-left: 4px solid transparent;
     padding: .5rem 1rem;
     background-color: $color-white;
 
@@ -47,6 +47,10 @@
 
   .actions-cell .dropdown-toggle::after {
     display: none;
+  }
+
+  .actions {
+    text-align: right;
   }
 }
 
